Write value class fields through a final-capable writer
 A VarHandle refuses to write any final field, and value-typed fields
  are typically final - a record's components always are. Owner fields
  are now written through a setter handle of the accessible field, which
  writes finals and is equally layout-aware. A record's fields refuse
  every handle write, so they go through the internal accessor that
  populates their other fields, made layout-aware for flat fields.
  Reading stays on the VarHandle.